adicion de cloudinary config y ruta de subida y borrada de imagenes

--- a/back/.env.example
+++ b/back/.env.example
@@ -5,3 +5,7 @@ DB_USERNAME=<PLACEHOLDER>
 DB_PASSWORD=<PLACEHOLDER>
 
 JWT_SECRET=<PLACEHOLDER>
+
+CLOUDINARY_CLOUD_NAME=<PLACEHOLDER>
+CLOUDINARY_API_SECRET=<PLACEHOLDER>
+CLOUDINARY_API_KEY=<PLACEHOLDER>
