--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -18,5 +18,6 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true,
+    "types": ["multer", "express", "node"]
   }
 }
